[package]
name = "lsdup"
version = "0.1.0"
authors = ["redsaz <redsaz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["c_avx512", "rayon"]
c_avx512 = ["blake3/c_avx512"]
c_neon = ["blake3/c_neon"]
rayon = ["blake3/rayon", "memmap"]

[dependencies]

clap = { version = "2.33.0", default-features = false }
arrayvec = { version = "0.5.1", default-features = false, features = ["array-sizes-33-128"] }
blake3 = "0.1.3"
# ring = "0.16.9"
memmap = {version = "0.7.0", optional = true}
console = "0.14.0"
indicatif = "0.15.0"