[package]
name = "lsdup"
version = "0.1.0"
authors = ["redsaz <redsaz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pico-args = "0.4.0"
blake3 = "0.3.7"

[profile.release]
# Optimizations for size: https://github.com/johnthagen/min-sized-rust
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'